# eterna-primavera

./: .gitignore  Dockerfile  README.md  app.py  credentials.yaml  environment.yaml  environment.yml  packages.txt  pyproject.toml  requirements.txt
eterna-primavera/: 0_👋🏻_Bienvenido.py  cities.py  constants.py  language.py  pictures.py  plots.py  texts.py  utils.py
eterna-primavera/assets/: 1_sobre_style.css  2_analizador_style.css
eterna-primavera/aux_data/: cities.parquet  codigos_dane.csv  population.json  prepare.py  valle_aburra.parquet
eterna-primavera/loaders/: geometries.py  load_cities.py  load_geometries.py  load_listings.py
eterna-primavera/pages/: 1_🇨🇴_Sobre_Medellin.py  1_🏡_Eterna_Primavera.py  2_🏘_Analisis_de_Propiedades.py  2_🏘_Analizador_de_Propiedades.py  2_🗺_Analisis_Espacial.py
eterna-primavera/transformers/: gdf_to_json.py  hex.py  trim_outliers.py
notebooks/: data.ipynb  filter_geometries.ipynb
