[tool.poetry]
name = "real-estate-analytics"
version = "0.1.0"
description = "Porpiedad Raiz en la Ciudad de la Eterna Primavera"
authors = ["jlondonob <j.londonobo@gmail.com>"]
readme = "README.md"
packages = [{include = "real_estate_analytics"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
pandas = "<2.0"
httpx = "^0.23.3"
plotly = "^5.14.0"
shapely = "^2.0.1"
real-estate = {git = "https://github.com/HumanLD/human-real-estate"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
