[tool.poetry]
name = "real-estate-analytics"
version = "0.1.0"
description = "Porpiedad Raiz en la Ciudad de la Eterna Primavera"
authors = ["jlondonob <j.londonobo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.20.0"
pandas = "<2.0"
httpx = "^0.23.3"
plotly = "^5.14.0"
shapely = "^2.0.1"
real-estate = {git = "https://github.com/HumanLD/human-real-estate"}
ipykernel = "^6.22.0"
st-click-detector = "^0.1.3"
gdal = "^3.6.3"
geopandas = "^0.12.2"
geojson = "^3.0.1"
python-dotenv = "^1.0.0"
h3 = "^3.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
